made top data into list, also adjusted to prevent overflow

--- a/view/dashboard/style.css
+++ b/view/dashboard/style.css
@@ -51,8 +51,8 @@
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 3px 10px;
 	top: 10px;
+	height: 60px;
 	width: 500px;
 
 	o-border-radius: 5px;
@@ -73,18 +73,23 @@
 	background: -moz-linear-gradient(top,  #2F3A7E,  #28306B); /* for firefox 3.6+ */ 
 }
 
-.overviewData td {
+.theData {
 	color: white;
 	text-align: center;
 	width: 125px;
+	overflow: hidden;
+	float: left;
 }
 
 #overviewNum {
 	font-size: 35px;
 	line-height: 35px;
+	margin: 3px 0;
 }
 
 #overviewDescr {
 	font-weight: 300;
+	font-size: 12px;
+	font-height: 12px;
 }
 
